# repro-rules-js-dep-graph-bug

./: .bazelignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
patches/: README.md  webpack-cli@4.10.0.patch  webpack@5.74.0.patch
web/: package.json
web/src/webpack-testing/: BUILD.bazel  baz.js
