load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_rules_js",
    sha256 = "0eda531b1f01a507d5d1fc469c89422c0617e443aedf856f8f3dd520d0f5718b",
    strip_prefix = "rules_js-85969a021e72cce7b1518e6c056614ed58a21f5b",
    url = "https://github.com/aspect-build/rules_js/archive/85969a021e72cce7b1518e6c056614ed58a21f5b.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "DEFAULT_NODE_VERSION", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "nodejs",
    node_version = DEFAULT_NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    patch_args = {
        "webpack@5.74.0": ["-p1"],
        "webpack-cli@4.10.0": ["-p1"],
    },
    patches = {
        "webpack@5.74.0": ["//:patches/webpack@5.74.0.patch"],
        "webpack-cli@4.10.0": ["//:patches/webpack-cli@4.10.0.patch"],
    }
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

# Workaround for https://github.com/aspect-build/rules_js/issues/486
load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "register_jq_toolchains")
aspect_bazel_lib_dependencies(override_local_config_platform = True)